Attempt fix invisible

--- a/css/siek.css
+++ b/css/siek.css
@@ -18,13 +18,6 @@ a svg:hover #logo{
 	text-align: right;
 }
 
-#sk-fade-text{
-	font-color: #343434;
-	background: linear-gradient(90deg, #343434, rgba(83,83,83,0.15));
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-}
-
 .social-link{
 	margin: 15px 0px;
 	display: inline-block;
@@ -114,12 +107,22 @@ figcaption h2{
 	padding-bottom:50%;
 }
 
+#sk-fade-text{
+	font-color: #343434;
+}
+
 @media (min-width: 768px){
 	#myself{
 		margin-top: 130px;
 	}
 	.conclusion-div{
 		padding-bottom:0px;
+	}
+	#sk-fade-text{
+		font-color: #343434;
+		background: linear-gradient(90deg, #343434, rgba(83,83,83,0.15));
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
 	}
 }
 
